--- a/base/package.yaml
+++ b/base/package.yaml
@@ -3,6 +3,6 @@ author: Thibault (the farmer)
 version: 0.0.1
 description: This is not the pack you are looking for.
 icon:
-	- name: ping
-	- background: red
-	- foreground: blue
+	name: ping
+	background: red
+	foreground: blue
