--- a/nginx/package.yaml
+++ b/nginx/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Status page and access log monitoring that returns performance data including requests per second in addition to http exit codes and response times.
 icon:
     name: nginx
-    background: #009733
+    background: "#009733"
     foreground: white
