--- a/riak/package.yaml
+++ b/riak/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Every metric from riak-admin status including fsm put and get times along with operations per second.
 icon:
     name: riak
-    background: #595C61
-    foreground: #F88A00
+    background: "#595C61"
+    foreground: "#F88A00"
