update riak rules

--- a/riak/rules/riak.yaml
+++ b/riak/rules/riak.yaml
@@ -1,29 +1,24 @@
 title: Riak
 criteria:
-  - metric: 'riak.status'
-    scope:
-      tag: riak
-    condition:
-      timeout: 120
-      threshold: false
   - metric: riak.node_get_fsm_time_mean
     scope:
       tag: riak
     condition:
       timeout: 120
       threshold: 300
-- metric: riak.node_put_fsm_time_mean
+  - metric: riak.node_put_fsm_time_mean
     scope:
       tag: riak
     condition:
       timeout: 120
       threshold: 1000
-- metric: base.disk./data.percent_used
+  - metric: riak.status
     scope:
       tag: riak
     condition:
-      timeout: 60
-      threshold: 70
+      timeout: 120
+      threshold: false
 actions:
-  - emails: []
+  - emails:
     message: ''
+
