--- a/riak/dashboards/riak.yaml
+++ b/riak/dashboards/riak.yaml
@@ -1,29 +1,23 @@
 title: Riak
 period: 86400
 positions:
-  - title: get time 100th percentile
+  - title: fractional load
+    data_type: number
     type: detailed-chart
-    color: green
+    color: fuchsia
     row: 1
     col: 1
-    size_x: 2
-    size_y: 2
+    size_x: 4
+    size_y: 1
+    legend: false
+    icon: true
+    filter: avg
     series:
-      - metric: riak.node_get_fsm_time_100
+      - metric: base.load_fractional
         scope:
           tag: riak
-  - title: put time 100th percentile
-    type: detailed-chart
-    color: purple
-    row: 1
-    col: 3
-    size_x: 2
-    size_y: 2
-    series:
-      - metric: riak.node_put_fsm_time_100
-        scope:
-          tag: riak
-  - title: cluster max load
+  - title: max fractional load
+    data_type: number
     type: number
     color: navy
     row: 1
@@ -32,8 +26,10 @@ positions:
     size_y: 1
     filter: max
     symbol: ambulance
+    legend: false
+    icon: true
     series:
-      - metric: load.load.shortterm
+      - metric: base.load_fractional
         scope:
           tag: riak
   - title: server status
@@ -44,21 +40,55 @@ positions:
     col: 6
     size_x: 1
     size_y: 1
+    legend: false
+    icon: true
     series:
       - metric: 'source:status'
         scope:
           tag: riak
-  - title: cluster max memory used
+  - title: get time 100th percentile
+    type: detailed-chart
+    color: green
+    row: 2
+    col: 1
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: riak.node_get_fsm_time_100
+        scope:
+          tag: riak
+  - title: put time 100th percentile
+    type: detailed-chart
+    color: purple
+    row: 2
+    col: 3
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: riak.node_put_fsm_time_100
+        scope:
+          tag: riak
+  - title: max memory used
+    data_type: number
     type: number
     color: blue
     row: 2
     col: 5
     size_x: 1
-    size_y: 1
+    size_y: 2
     filter: max
     symbol: lightbulb-o
+    legend: false
+    icon: true
     series:
       - metric: memory.memory-used
+        scope:
+          tag: riak
+      - metric: base.memory
         scope:
           tag: riak
   - title: cluster max cpu used
@@ -67,9 +97,11 @@ positions:
     row: 2
     col: 6
     size_x: 1
-    size_y: 1
+    size_y: 2
     filter: max
     symbol: tachometer
+    legend: false
+    icon: true
     series:
       - metric: base.cpu
         scope:
@@ -77,11 +109,13 @@ positions:
   - title: get time 99th percentile
     type: detailed-chart
     color: green
-    row: 3
+    row: 4
     col: 1
     size_x: 2
     size_y: 2
     symbol: bar-chart-o
+    legend: false
+    icon: true
     series:
       - metric: riak.node_get_fsm_time_99
         scope:
@@ -89,75 +123,57 @@ positions:
   - title: put time 99th percentile
     type: detailed-chart
     color: purple
-    row: 3
+    row: 4
     col: 3
     size_x: 2
     size_y: 2
     symbol: bar-chart-o
+    legend: false
+    icon: true
     series:
       - metric: riak.node_put_fsm_time_99
-        scope:
-          tag: riak
-  - title: get time mean
-    type: number
-    color: green
-    row: 3
-    col: 5
-    size_x: 1
-    size_y: 1
-    filter: max
-    symbol: arrow-circle-up
-    series:
-      - metric: riak.node_get_fsm_time_mean
-        scope:
-          tag: riak
-  - title: put time mean
-    type: number
-    color: purple
-    row: 3
-    col: 6
-    size_x: 1
-    size_y: 1
-    symbol: arrow-circle-down
-    filter: max
-    series:
-      - metric: riak.node_put_fsm_time_mean
-        scope:
-          tag: riak
-  - title: get time median
-    type: number
-    color: green
-    row: 4
-    col: 5
-    size_x: 1
-    size_y: 1
-    symbol: arrow-circle-up
-    filter: max
-    series:
-      - metric: riak.node_get_fsm_time_median
         scope:
           tag: riak
   - title: put time median
     type: number
     color: purple
     row: 4
-    col: 6
+    col: 5
     size_x: 1
-    size_y: 1
+    size_y: 2
     symbol: arrow-circle-down
     filter: max
+    legend: false
+    icon: true
     series:
       - metric: riak.node_put_fsm_time_median
+        scope:
+          tag: riak
+  - title: put time mean
+    type: number
+    color: purple
+    row: 4
+    col: 6
+    size_x: 1
+    size_y: 2
+    symbol: arrow-circle-down
+    filter: max
+    legend: false
+    icon: true
+    series:
+      - metric: riak.node_put_fsm_time_mean
         scope:
           tag: riak
   - title: get time 95th percentile
     type: detailed-chart
     color: green
-    row: 5
+    row: 6
     col: 1
     size_x: 2
     size_y: 1
     symbol: bar-chart-o
+    legend: false
+    icon: true
     series:
       - metric: riak.node_get_fsm_time_95
         scope:
@@ -165,22 +181,44 @@ positions:
   - title: put time 95th percentile
     type: detailed-chart
     color: purple
-    row: 5
+    row: 6
     col: 3
     size_x: 2
     size_y: 1
     symbol: bar-chart-o
+    legend: false
+    icon: true
     series:
       - metric: riak.node_put_fsm_time_95
         scope:
           tag: riak
-  - type: detailed-chart
-    color: red
-    row: 5
+  - title: get time median
+    type: number
+    color: green
+    row: 6
     col: 5
-    size_x: 2
+    size_x: 1
     size_y: 1
+    symbol: arrow-circle-up
+    filter: max
+    legend: false
+    icon: true
     series:
-      - metric: base.load_1_min
+      - metric: riak.node_get_fsm_time_median
+        scope:
+          tag: riak
+  - title: get time mean
+    type: number
+    color: green
+    row: 6
+    col: 6
+    size_x: 1
+    size_y: 1
+    filter: max
+    symbol: arrow-circle-up
+    legend: false
+    icon: true
+    series:
+      - metric: riak.node_get_fsm_time_mean
         scope:
           tag: riak
