--- a/mongo/package.yaml
+++ b/mongo/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Every metric from mongostat
 icon:
     name: mongo
-    background: white
-    foreground: green
+    background: green
+    foreground: white
