--- a/iis/package.yaml
+++ b/iis/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Metrics from Microsoft Internet Information Services
 icon:
     name: website
-    background: light grey
-    foreground: dark grey
+    background: lightgray
+    foreground: darkgray
