--- a/exchange/package.yaml
+++ b/exchange/package.yaml
@@ -5,4 +5,4 @@ description: Metrics from Microsoft Exchange Server
 icon:
     name: windows
     background: orange
-    foreground: lightgray
+    foreground: white
