remove replication and innodb from default mysql dash

--- a/mysql/dashboards/mysql.yaml
+++ b/mysql/dashboards/mysql.yaml
@@ -14,8 +14,7 @@ positions:
     series:
       - metric: 'source:status'
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: CPU
     data_type: number
     type: detailed-chart
@@ -25,12 +24,11 @@ positions:
     size_x: 2
     size_y: 2
     icon: true
-    legend: true
+    legend: false
     series:
       - metric: base.cpu
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: IOwait
     data_type: number
     type: detailed-chart
@@ -40,12 +38,11 @@ positions:
     size_x: 2
     size_y: 2
     icon: true
-    legend: true
+    legend: false
     series:
       - metric: base.cpu.iowait
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Total Mem
     data_type: number
     type: detailed-chart
@@ -55,12 +52,11 @@ positions:
     size_x: 2
     size_y: 1
     icon: true
-    legend: true
+    legend: false
     series:
       - metric: base.vmem.total_gb
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: '% Used /data'
     data_type: number
     type: detailed-chart
@@ -70,12 +66,11 @@ positions:
     size_x: 2
     size_y: 2
     icon: true
-    legend: true
+    legend: false
     series:
       - metric: base.disk./.percent_used
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Host Status
     data_type: nagios
     type: status
@@ -89,8 +84,7 @@ positions:
     series:
       - metric: base.status
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Available Mem
     data_type: number
     type: detailed-chart
@@ -100,12 +94,11 @@ positions:
     size_x: 2
     size_y: 1
     icon: true
-    legend: true
+    legend: false
     series:
       - metric: base.vmem.available_gb
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: MySQL Stats Available
     data_type: nagios
     type: status
@@ -119,8 +112,7 @@ positions:
     series:
       - metric: mysql.status
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Slow Queries / s
     data_type: number
     type: detailed-chart
@@ -134,12 +126,11 @@ positions:
     series:
       - metric: mysql.slow_queries_per_sec
         scope:
-          tag:
-            - mysql
-  - title: Deadlocks / s
+          tag: mysql
+  - title: Open Tables
     data_type: number
     type: detailed-chart
-    color: maroon
+    color: navy
     row: 3
     col: 4
     size_x: 2
@@ -147,10 +138,9 @@ positions:
     icon: true
     legend: false
     series:
-      - metric: mysql.innodb_deadlocks_per_sec
+      - metric: mysql.open_tables
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Transactions / s
     data_type: number
     type: detailed-chart
@@ -164,8 +154,7 @@ positions:
     series:
       - metric: mysql.questions_per_sec
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Connections / s
     data_type: number
     type: detailed-chart
@@ -179,8 +168,7 @@ positions:
     series:
       - metric: mysql.connections_per_sec
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Connection Errors / s
     data_type: number
     type: detailed-chart
@@ -194,12 +182,11 @@ positions:
     series:
       - metric: mysql.aborted_connects_per_sec
         scope:
-          tag:
-            - mysql
-  - title: Replication Status
-    data_type: nagios
-    type: status
-    color: maroon
+          tag: mysql
+  - title: Threads Running
+    data_type: number
+    type: detailed-chart
+    color: olive
     row: 4
     col: 1
     size_x: 1
@@ -207,44 +194,55 @@ positions:
     icon: true
     legend: false
     series:
-      - metric: moz_mysql_replication.status
+      - metric: mysql.threads_running
         scope:
-          tag:
-            - mysql
-  - title: Threads Running
+          tag: mysql
+  - title: Net Up
     data_type: number
     type: detailed-chart
-    color: olive
+    color: navy
     row: 5
     col: 1
     size_x: 1
-    size_y: 2
+    size_y: 1
     icon: true
     legend: false
     series:
-      - metric: mysql.threads_running
+      - metric: base.net_upload
         scope:
-          tag:
-            - mysql
-  - title: Replication Lag
+          tag: mysql
+  - title: Data Buffer Pool Pages
     data_type: number
     type: detailed-chart
-    color: olive
+    color: purple
     row: 5
     col: 2
-    size_x: 2
-    size_y: 2
+    size_x: 1
+    size_y: 1
     icon: true
     legend: false
     series:
-      - metric: moz_pt_heartbeat.repl_lag
+      - metric: mysql.innodb_buffer_pool_pages_data
         scope:
-          tag:
-            - mysql
-  - title: Repl Lag 15m Avg
+          tag: mysql
+  - title: Row Lock Waits / s
     data_type: number
     type: detailed-chart
-    color: olive
+    color: aqua
+    row: 5
+    col: 3
+    size_x: 1
+    size_y: 1
+    icon: true
+    legend: false
+    series:
+      - metric: mysql.innodb_row_lock_waits_per_sec
+        scope:
+          tag: mysql
+  - title: Open Files / s
+    data_type: number
+    type: detailed-chart
+    color: navy
     row: 5
     col: 4
     size_x: 2
@@ -252,10 +250,9 @@ positions:
     icon: true
     legend: false
     series:
-      - metric: moz_pt_heartbeat.repl_lag_15m_avg
+      - metric: mysql.open_files_per_sec
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Temp Tables / s
     data_type: number
     type: detailed-chart
@@ -269,8 +266,7 @@ positions:
     series:
       - metric: mysql.created_tmp_tables_per_sec
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Temp Disk Tables / s
     data_type: number
     type: detailed-chart
@@ -284,8 +280,7 @@ positions:
     series:
       - metric: mysql.created_tmp_disk_tables_per_sec
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Temp Files / s
     data_type: number
     type: detailed-chart
@@ -299,118 +294,12 @@ positions:
     series:
       - metric: mysql.created_tmp_files_per_sec
         scope:
-          tag:
-            - mysql
-  - title: Net Up
-    data_type: number
-    type: detailed-chart
-    color: navy
-    row: 7
-    col: 1
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: base.net_upload
-        scope:
-          tag:
-            - mysql
-  - title: Data Buffer Pool Pages
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 7
-    col: 2
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_buffer_pool_pages_data
-        scope:
-          tag:
-            - mysql
-  - title: Row Lock Waits / s
-    data_type: number
-    type: detailed-chart
-    color: aqua
-    row: 7
-    col: 3
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_row_lock_waits_per_sec
-        scope:
-          tag:
-            - mysql
-  - title: InnoDB Memory Usage
-    data_type: number
-    type: detailed-chart
-    color: navy
-    row: 7
-    col: 4
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_mem_total
-        scope:
-          tag:
-            - mysql
-  - title: Open Tables
-    data_type: number
-    type: detailed-chart
-    color: navy
-    row: 7
-    col: 5
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.open_tables
-        scope:
-          tag:
-            - mysql
-  - title: Mutex Spin Waits / s
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 7
-    col: 6
-    size_x: 2
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_mutex_spin_waits_per_sec
-        scope:
-          tag:
-            - mysql
-  - title: Mutex Spin Rounds / s
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 7
-    col: 8
-    size_x: 2
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_mutex_spin_rounds_per_sec
-        scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Net Down
     data_type: number
     type: detailed-chart
     color: navy
-    row: 8
+    row: 6
     col: 1
     size_x: 1
     size_y: 1
@@ -419,13 +308,12 @@ positions:
     series:
       - metric: base.net_download
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Dirty Buffer Pool Pages
     data_type: number
     type: detailed-chart
     color: purple
-    row: 8
+    row: 6
     col: 2
     size_x: 1
     size_y: 1
@@ -434,13 +322,12 @@ positions:
     series:
       - metric: mysql.innodb_buffer_pool_pages_dirty
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Avg Row Lock Time
     data_type: number
     type: detailed-chart
     color: aqua
-    row: 8
+    row: 6
     col: 3
     size_x: 1
     size_y: 1
@@ -449,171 +336,61 @@ positions:
     series:
       - metric: mysql.innodb_row_lock_time_avg
         scope:
-          tag:
-            - mysql
-  - title: InnoDB Dict Mem Usage
-    data_type: number
-    type: detailed-chart
-    color: navy
-    row: 8
-    col: 4
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_mem_dictionary
-        scope:
-          tag:
-            - mysql
-  - title: Open Files / s
-    data_type: number
-    type: detailed-chart
-    color: navy
-    row: 8
-    col: 5
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.open_files_per_sec
-        scope:
-          tag:
-            - mysql
-  - title: S-Lock Spin Waits / s
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 8
-    col: 6
-    size_x: 2
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_s_lock_spin_waits_per_sec
-        scope:
-          tag:
-            - mysql
-  - title: S-Lock Spin Rounds / s
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 8
-    col: 8
-    size_x: 2
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_s_lock_spin_rounds_per_sec
-        scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Page Size
     data_type: number
     type: number
     color: navy
-    row: 9
+    row: 7
     col: 1
-    size_x: 1
+    size_x: 2
     size_y: 1
-    icon: true
+    icon: false
     legend: false
     filter: max
     series:
       - metric: mysql.innodb_page_size
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Full Table Scans
     data_type: number
     type: detailed-chart
     color: purple
-    row: 9
-    col: 2
-    size_x: 1
+    row: 7
+    col: 3
+    size_x: 2
     size_y: 1
     icon: true
     legend: false
     series:
       - metric: mysql.select_scan_per_sec
         scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Max Row Lock Time
     data_type: number
     type: detailed-chart
     color: aqua
-    row: 9
-    col: 3
-    size_x: 1
+    row: 7
+    col: 5
+    size_x: 2
     size_y: 1
     icon: true
     legend: false
     series:
       - metric: mysql.innodb_row_lock_time_max
         scope:
-          tag:
-            - mysql
-  - title: InnoDB Adapt Hash Mem Usage
-    data_type: number
-    type: detailed-chart
-    color: navy
-    row: 9
-    col: 4
-    size_x: 1
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_mem_adaptive_hash
-        scope:
-          tag:
-            - mysql
+          tag: mysql
   - title: Query Cache Mem Free
     data_type: number
     type: detailed-chart
     color: navy
-    row: 9
-    col: 5
-    size_x: 1
+    row: 7
+    col: 7
+    size_x: 3
     size_y: 1
     icon: true
     legend: false
     series:
       - metric: mysql.qcache_free_memory
         scope:
-          tag:
-            - mysql
-  - title: X-Lock Spin Waits / s
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 9
-    col: 6
-    size_x: 2
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_x_lock_spin_waits_per_sec
-        scope:
-          tag:
-            - mysql
-  - title: X-Lock Spin Rounds / s
-    data_type: number
-    type: detailed-chart
-    color: purple
-    row: 9
-    col: 8
-    size_x: 2
-    size_y: 1
-    icon: true
-    legend: false
-    series:
-      - metric: mysql.innodb_x_lock_spin_rounds_per_sec
-        scope:
-          tag:
-            - mysql
+          tag: mysql
