--- a/elasticsearch/dashboards/elasticsearch.yaml
+++ b/elasticsearch/dashboards/elasticsearch.yaml
@@ -1,215 +1,369 @@
-title: ElasticSearch
+title: elasticsearch
 period: 600
 positions:
-  - title: no. of nodes
-    type: number
-    color: green
+  - title: elasticsearch.status
+    data_type: nagios
+    type: status
+    color: maroon
     row: 1
     col: 1
     size_x: 1
     size_y: 1
-    symbol: globe
-    filter: max
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.number_of_nodes
-        scope:
-          tag: elasticsearch
-  - title: active primary shards
-    type: number
-    color: navy
-    row: 1
-    col: 2
-    size_x: 1
-    size_y: 1
-    symbol: smile-o
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.active_primary_shards
-        scope:
-          tag: elasticsearch
-  - title: active shards
-    type: number
-    color: blue
-    row: 1
-    col: 3
-    size_x: 1
-    size_y: 1
-    symbol: star-o
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.active_shards
-        scope:
-          tag: elasticsearch
-  - title: Cluster Status
-    data_type: nagios
-    type: status
-    color: aqua
-    row: 1
-    col: 4
-    size_x: 3
-    size_y: 2
     legend: false
     icon: true
     series:
       - metric: elasticsearch.status
         scope:
           tag: elasticsearch
-  - title: relocating shards
+  - title: Document Count
+    data_type: number
+    type: stacked-chart
+    color: orange
+    row: 1
+    col: 2
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: elasticsearch.indices.docs.count
+        scope:
+          tag: elasticsearch
+  - title: Deleted Documents
+    data_type: number
+    type: detailed-chart
+    color: red
+    row: 1
+    col: 4
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    filter: avg
+    series:
+      - metric: elasticsearch.indices.docs.deleted
+        scope:
+          tag: elasticsearch
+  - title: Get Time (ms)
+    data_type: number
+    type: stacked-chart
+    color: orange
+    row: 1
+    col: 6
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: elasticsearch.indices.get.time_in_millis
+        scope:
+          tag: elasticsearch
+  - title: Disk Free (bytes)
+    data_type: number
     type: number
     color: aqua
     row: 2
     col: 1
     size_x: 1
     size_y: 1
-    symbol: spinner
     legend: false
-    icon: true
+    icon: false
+    filter: max
     series:
-      - metric: elasticsearch.relocating_shards
+      - metric: elasticsearch.fs.total.free_in_bytes
         scope:
           tag: elasticsearch
-  - title: unassigned shards
-    type: number
-    color: teal
-    row: 2
-    col: 2
-    size_x: 1
-    size_y: 1
-    symbol: meh-o
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.unassigned_shards
-        scope:
-          tag: elasticsearch
-  - title: initialising shards
-    type: number
-    color: olive
-    row: 2
-    col: 3
-    size_x: 1
-    size_y: 1
-    symbol: magic
-    legend: false
-    icon: true
-    series:
-      - metric: elasticsearch.initializing_shards
-        scope:
-          tag: elasticsearch
-  - title: 'JVM Heap Used %'
+  - title: Disk Total (bytes)
     data_type: number
-    type: chart
-    color: fuchsia
+    type: number
+    color: blue
     row: 3
     col: 1
-    size_x: 6
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: false
+    filter: max
+    series:
+      - metric: elasticsearch.fs.total.total_in_bytes
+        scope:
+          tag: elasticsearch
+  - title: Total Document Merges
+    data_type: number
+    type: detailed-chart
+    color: teal
+    row: 3
+    col: 2
+    size_x: 2
     size_y: 2
     legend: false
     icon: true
     filter: avg
+    series:
+      - metric: elasticsearch.indices.merges.total_docs
+        scope:
+          tag: elasticsearch
+  - title: Delete Time (ms)
+    data_type: number
+    type: stacked-chart
+    color: olive
+    row: 3
+    col: 4
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: elasticsearch.indices.indexing.delete_time_in_millis
+        scope:
+          tag: elasticsearch
+  - title: Search Query Time (ms)
+    data_type: number
+    type: stacked-chart
+    color: teal
+    row: 3
+    col: 6
+    size_x: 2
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: elasticsearch.indices.search.query_time_in_millis
+        scope:
+          tag: elasticsearch
+  - title: Store Size (bytes)
+    data_type: number
+    type: number
+    color: navy
+    row: 4
+    col: 1
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: false
+    filter: max
+    series:
+      - metric: elasticsearch.indices.store.size_in_bytes
+        scope:
+          tag: elasticsearch
+  - title: 'JVM Heap Used (%)'
+    data_type: number
+    type: stacked-chart
+    color: maroon
+    row: 5
+    col: 1
+    size_x: 3
+    size_y: 1
+    legend: false
+    icon: true
     series:
       - metric: elasticsearch.jvm.mem.heap_used_percent
         scope:
           tag: elasticsearch
-  - title: load average
-    type: chart
-    color: green
+  - title: elasticsearch.os.mem.free_percent
+    data_type: number
+    type: stacked-chart
+    color: fuchsia
     row: 5
-    col: 1
+    col: 4
     size_x: 3
-    size_y: 2
+    size_y: 1
     legend: false
     icon: true
-    filter: avg
     series:
-      - metric: base.load_1_min
+      - metric: elasticsearch.os.mem.free_percent
         scope:
           tag: elasticsearch
-  - title: disk available
+  - title: JVM Loaded Classes
     data_type: number
     type: number
     color: maroon
     row: 5
-    col: 4
+    col: 7
     size_x: 1
     size_y: 1
-    symbol: archive
     legend: false
     icon: false
+    filter: max
     series:
-      - metric: base.disk./.free_gb
+      - metric: elasticsearch.jvm.classes.current_loaded_count
         scope:
           tag: elasticsearch
-  - title: fs total disk io ops
-    type: number
+  - title: JVM GC Young CollectionTime (ms)
+    data_type: number
+    type: stacked-chart
     color: fuchsia
-    row: 5
-    col: 5
-    size_x: 1
-    size_y: 1
-    legend: false
-    icon: true
-    symbol: hdd-o
-    series:
-      - metric: elasticsearch.fs.total.disk_io_op
-        scope:
-          tag: elasticsearch
-  - title: field data memory size
-    type: number
-    color: purple
-    row: 5
-    col: 6
-    size_x: 1
+    row: 6
+    col: 1
+    size_x: 3
     size_y: 1
     legend: false
     icon: true
     series:
-      - metric: elasticsearch.indices.fielddata.memory_size_in_bytes
+      - metric: elasticsearch.jvm.gc.collectors.young.collection_time_in_millis
         scope:
           tag: elasticsearch
-  - title: query total
-    type: number
-    color: orange
+  - title: JVM GC Old Collection Time (ms)
+    data_type: number
+    type: stacked-chart
+    color: maroon
     row: 6
     col: 4
-    size_x: 1
+    size_x: 3
     size_y: 1
-    symbol: question
     legend: false
-    icon: false
+    icon: true
     series:
-      - metric: elasticsearch.indices.search.query_total
+      - metric: elasticsearch.jvm.gc.collectors.old.collection_time_in_millis
         scope:
           tag: elasticsearch
-  - title: merges total size
+  - title: JVM Thread Count
+    data_type: number
+    type: number
+    color: maroon
+    row: 6
+    col: 7
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    symbol: list-ul
+    series:
+      - metric: elasticsearch.jvm.threads.count
+        scope:
+          tag: elasticsearch
+  - title: TP Get Active
+    data_type: number
+    type: number
+    color: teal
+    row: 7
+    col: 1
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    series:
+      - metric: elasticsearch.thread_pool.get.active
+        scope:
+          tag: elasticsearch
+  - title: TP Get Queue
+    data_type: number
     type: number
     color: blue
-    row: 6
-    col: 5
+    row: 7
+    col: 2
     size_x: 1
     size_y: 1
-    symbol: random
     legend: false
-    icon: false
+    icon: true
+    filter: max
     series:
-      - metric: elasticsearch.indices.merges.total_size_in_bytes
+      - metric: elasticsearch.thread_pool.get.queue
         scope:
           tag: elasticsearch
-  - title: indexing total
+  - title: Load Average
+    data_type: number
+    type: stacked-chart
+    color: red
+    row: 7
+    col: 3
+    size_x: 3
+    size_y: 2
+    legend: false
+    icon: true
+    series:
+      - metric: elasticsearch.os.load_average
+        scope:
+          tag: elasticsearch
+  - title: TP Search Active
+    data_type: number
     type: number
-    color: aqua
-    row: 6
+    color: navy
+    row: 7
     col: 6
     size_x: 1
     size_y: 1
-    symbol: spinner
     legend: false
-    icon: false
+    icon: true
+    filter: max
     series:
-      - metric: elasticsearch.indices.indexing.index_total
+      - metric: elasticsearch.thread_pool.search.active
+        scope:
+          tag: elasticsearch
+  - title: TP Search Queue
+    data_type: number
+    type: number
+    color: navy
+    row: 7
+    col: 7
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    series:
+      - metric: elasticsearch.thread_pool.search.queue
+        scope:
+          tag: elasticsearch
+  - title: TP Get Rejected
+    data_type: number
+    type: number
+    color: maroon
+    row: 8
+    col: 1
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    series:
+      - metric: elasticsearch.thread_pool.get.rejected
+        scope:
+          tag: elasticsearch
+  - title: TP Get Complete
+    data_type: number
+    type: number
+    color: teal
+    row: 8
+    col: 2
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    series:
+      - metric: elasticsearch.thread_pool.get.completed
+        scope:
+          tag: elasticsearch
+  - title: TP Search Rejected
+    data_type: number
+    type: number
+    color: blue
+    row: 8
+    col: 6
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    series:
+      - metric: elasticsearch.thread_pool.search.rejected
+        scope:
+          tag: elasticsearch
+  - title: TP Search Complete
+    data_type: number
+    type: number
+    color: blue
+    row: 8
+    col: 7
+    size_x: 1
+    size_y: 1
+    legend: false
+    icon: true
+    filter: max
+    series:
+      - metric: elasticsearch.thread_pool.search.completed
         scope:
           tag: elasticsearch
